modified css file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button>Learn More</button>
       </div>
     </section>
-    <section class="suvs">
+    <section class="suvs column">
       <img src="./images/icon-suvs.svg" alt="suvs">
       <h2>SUVs</h2>
       <div class="column">
@@ -29,7 +29,7 @@
         <button>Learn More</button>
       </div>
     </section>
-    <section class="luxury">
+    <section class="luxury column">
       <img src="./images/icon-luxury.svg" alt="luxury">
       <h2>Luxury</h2>
       <div class="column">
